# tinytile-dly

./: .gitignore  .gitmodules  ApplyTilingSpec.cpp  CMakeLists.txt  Passes.h  Passes.td  README.md  TileAndFuse.cpp  Tutorial.cpp  Tutorial.h  Vectorization.cpp  config.sh  example.mlir  find-name.sh  main.cpp
include/: BufferizableOpInterfaceImpl.h  CMakeLists.txt  Listener.h  Passes.h  Passes.td  SliceListener.h  Tutorial.h  Tutorial.td
lib/: BufferizableOpInterfaceImpl.cpp  CMakeLists.txt  SliceListener.cpp  TileAndFuse.cpp  Tutorial.cpp  Vectorization.cpp
scripts/: build-llvm.sh  build-tinytile.sh
test/: example-experiment.mlir  example-transform.mlir  example-tutorial.mlir  example.mlir  result-experiment.mlir  result-tutorial.mlir  result.mlir  test-exp.sh  test.sh
tools/: CMakeLists.txt  main.cpp
tutorial/bufferization/debug/: example.mlir  result.mlir  test.sh
